dice-game-dashboard-ingress/dice-game-dashboard-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: dice-game-dashboard-nodeport
  labels:
    name: dice-game-dashboard-nodeport
    app: dice-game-app
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: 4200
  selector:
    name: dice-game-dashboard-pod
    app: dice-game-app
    type: front-end
